tests/sumo/errors/too_many_teleports/output.sumo.meso
Loading net-file from 'net.net.xml' ... done (3ms).
Loading done.
Simulation version v1_8_0+0309-f6f0de62b4 started with time: 0.00
Simulation ended at time: 5091.00
Reason: Too many teleports.
Performance: 
 Duration: 0.10s
 Real time factor: 49427.2
 UPS: 9075621.359223
Vehicles: 
 Inserted: 305 (Loaded: 500)
 Running: 262
 Waiting: 195
Teleports: 6 (Jam: 6)

